Use correct env variables for wonderland configuration

--- a/wonderland.yaml
+++ b/wonderland.yaml
@@ -5,9 +5,9 @@ components:
     image: {{env `CRONS_IMAGE`}}
     env:
       NOMAD_API: '{{env `NOMAD_API`}}'
-      NOMAD_USER: '{{env `NOMAD_USER`}}'
-      NOMAD_PASS: '{{env `NOMAD_PASS`}}'
       NOMAD_WL_DOCKER_IMAGE: '{{ env `NOMAD_WL_DOCKER_IMAGE`}}'
+      AWS_REGION: '{{env `NOMAD_AWS_REGION`}}'
+      WONDERLAND_ENV: '{{env `WONDERLAND_ENV`}}'
       $ref_secrets: vault+secret://vault.{{env `ZONE`}}/wonderland/crons
   - name: auth-proxy
     image: {{env `AUTH_PROXY_IMAGE`}}
