--- a/wonderland.yaml
+++ b/wonderland.yaml
@@ -12,6 +12,8 @@ components:
       NOMAD_WL_DOCKER_IMAGE: '{{ env `NOMAD_WL_DOCKER_IMAGE`}}'
       WONDERLAND_ENV: '{{env `WONDERLAND_ENV`}}'
       WONDERLAND_REGISTRY_ADDRESS: '{{env `WONDERLAND_REGISTRY` }}'
+      CRONS_TABLE_NAME: '{{env `CRONS_TABLE_NAME` }}'
+      TASKS_TABLE_NAME: '{{env `TASKS_TABLE_NAME` }}'
       $ref_secrets: vault+secret://vault.{{env `ZONE`}}/wonderland/crons
     capacity:
       memory: M
