ingore mock directories during metalinting

--- a/metalinter-config.json
+++ b/metalinter-config.json
@@ -24,6 +24,9 @@
         "unused",
         "staticcheck"
     ],
+    "Skip": [
+        "mock"
+    ],
     "Exclude": [
         "should have comment.* or be unexported"
     ],
