Split up testing and execution of qa tools in separate make targets
this way local testing is way faster as qa tools are running really
slow.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 services:
     - docker
 
-script: make test push BRANCH=$TRAVIS_BRANCH
+script: make ci push BRANCH=$TRAVIS_BRANCH
 
 deploy:
   provider: script
