--- a/wonderland.yaml
+++ b/wonderland.yaml
@@ -15,6 +15,7 @@ components:
       CRONS_TABLE_NAME: '{{env `CRONS_TABLE_NAME` }}'
       EXECUTIONS_TABLE_NAME: '{{env `EXECUTIONS_TABLE_NAME` }}'
       WORKER_LEADER_LOCK_TABLE_NAME: '{{env `WORKER_LEADER_LOCK_TABLE_NAME`}}'
+      EXEC_TRIGGER_TOPIC_ARN: '{{env `EXEC_TRIGGER_TOPIC_ARN`}}'
       $ref_secrets: vault+secret://vault.{{env `ZONE`}}/wonderland/crons
     capacity:
       memory: M
