Add metrics endpoint

--- a/wonderland.yaml
+++ b/wonderland.yaml
@@ -42,6 +42,10 @@ endpoint:
   domain: crons.{{env `ZONE`}}
   healthcheck: /status
   port: 80
+metrics:
+  prometheus:
+    - component: crons
+      container-port: 8000
 notifications:
 {{if eq (env `WONDERLAND_ENV`) "prod"}}
   pagerduty: https://events.pagerduty.com/adapter/cloudwatch_sns/v1/33046cc63c3d4e6dafda9c336be58ae8
