--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 before_script: 
   - test "$QUAY_USER_PROD" -a "$QUAY_PASS_PROD"
   - docker login -u "$QUAY_USER_PROD" -p "$QUAY_PASS_PROD" quay.io
-  - test "$DOCKER_USER" -a "$DOCKER_USER"
+  - test "$DOCKER_USER" -a "$DOCKER_PASSWORD"
   - docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD" docker.io
   
 script: make $TEST_COMMAND BRANCH=$TRAVIS_BRANCH
