--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,17 +39,7 @@ jobs:
         username: ${{ env.DOCKER_USER }}
         password: ${{ env.DOCKER_PASSWORD }}
 
-    - name: Login to Quay.io registry
-      uses: docker/login-action@v1
-      with:
-        registry: quay.io
-        username: ${{ env.QUAY_USER_PROD }}
-        password: ${{ env.QUAY_PASS_PROD }}
-
     - uses: actions/checkout@v2
-    
-    - name: Lint
-      run: make lint
     
     - name: Test
       run: make test
@@ -60,3 +50,31 @@ jobs:
     - name: Notify Jenkins
       if: github.ref == 'refs/heads/master'
       run: make notify-jenkins BRANCH=${{ github.ref_name }}
+
+  lint:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - name: Get credentials
+        uses: hashicorp/vault-action@v2.4.0
+        with:
+          url: https://vault.jimdo-platform.net
+          method: jwt
+          role: wonderland_travis_migration
+          secrets: |
+            secret/wonderland/travis-config/quay QUAY_PASS_PROD ;
+            secret/wonderland/travis-config/quay QUAY_USER_PROD ;
+
+      - name: Login to Quay.io registry
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ env.QUAY_USER_PROD }}
+          password: ${{ env.QUAY_PASS_PROD }}
+
+      - uses: actions/checkout@v2
+
+      - name: Lint
+        run: make lint
